dvbsuboverlay: ensure valid subtitle running time by proper clipping

In particular, pass buffer timestamp (pts) to dvb_sub, and then clip
and convert to running time when the duration (timeout) is known after
decoding it.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=660233